config some file

--- a/search/src/main/res/layout/fragment_search.xml
+++ b/search/src/main/res/layout/fragment_search.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_black">
+    android:backgroundTint="@color/bg_black">
 
     <com.github.florent37.arclayout.ArcLayout
         android:id="@+id/arc"
