--- a/favorite/src/main/res/layout/fragment_fav_tv_shows.xml
+++ b/favorite/src/main/res/layout/fragment_fav_tv_shows.xml
@@ -23,6 +23,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:lottie_autoPlay="true"
+        app:lottie_loop="true"
         app:lottie_fileName="no_data.json" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
